--- a/frontend/src/components/CodeEditor.css
+++ b/frontend/src/components/CodeEditor.css
@@ -13,11 +13,14 @@
 
 .button-section {
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
 .execute-button {
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #b9b9b9;
   color: white;
   border: none;
   border-radius: 4px;
@@ -26,12 +29,32 @@
   transition: background-color 0.3s;
 }
 
+.submit-button {
+  padding: 10px 20px;
+  background-color: #29b92d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #60db64ec;
+}
+
+.submit-button:disabled {
+  background-color: #cccccc84;
+  cursor: not-allowed;
+}
+
 .execute-button:hover {
-  background-color: #45a049;
+  background-color: #c3c3c3ad;
 }
 
 .execute-button:disabled {
-  background-color: #cccccc;
+  background-color: #cccccc84;
   cursor: not-allowed;
 }
 
